Added div section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 <button id="disapproveBtn" class="primaryButton">Disapprove</button>
             </div>
         </div>
+
+        <div>
+            <h1>This is my testing page</h1>
+        </div>
 </body>
 
 </html>
