added article section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
         <div>
             <h1>This is my testing page</h1>
+            <article>Article added </article>
         </div>
 </body>
 
